objects/ssot__RegulatoryCodeViolation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ComplianceDueDateTime__c</fullName>
        <label>Compliance Due Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CorrectiveActionDescription__c</fullName>
        <label>Corrective Action Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDateTime__c</fullName>
        <label>Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DaysOpenCount__c</fullName>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Regulatory Code Violation Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecurrenceCount__c</fullName>
        <label>Recurrence Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RegulatoryCodeId__c</fullName>
        <label>Regulatory Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulatoryCodeViolationPriority__c</fullName>
        <label>Regulatory Code Violation Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulatoryCodeViolationStatus__c</fullName>
        <label>Regulatory Code Violation Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedContextId__c</fullName>
        <label>Related Context</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedContextObject__c</fullName>
        <label>Related Context Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResolutionNotesText__c</fullName>
        <label>Resolution Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResolvedDateTime__c</fullName>
        <label>Resolved Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ResponseId__c</fullName>
        <label>Response</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResponseObject__c</fullName>
        <label>Response Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ViolationTypeId__c</fullName>
        <label>Violation Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718545867420_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RegulatoryCodeViolation_RelatedConte_rel</label>
        <referenceTo>ssot__Visit__dlm</referenceTo>
        <relationshipLabel>RegulatoryCodeViolation_RelatedConte_rel</relationshipLabel>
        <relationshipName>rel_1718545867420_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718545869857_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RegulatoryCodeViolation_RegulatoryCo_rel</label>
        <referenceTo>ssot__RegulatoryCode__dlm</referenceTo>
        <relationshipLabel>RegulatoryCodeViolation_RegulatoryCo_rel</relationshipLabel>
        <relationshipName>rel_1718545869857_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718545874180_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RegulatoryCodeViolation_ViolationTyp_rel</label>
        <referenceTo>ssot__ViolationType__dlm</referenceTo>
        <relationshipLabel>RegulatoryCodeViolation_ViolationTyp_rel</relationshipLabel>
        <relationshipName>rel_1718545874180_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>